css/index.css
/*THEMES*/
.theme-dark {
    --mdc-theme-primary: #000000;
    --mdc-theme-on-primary: #FFFFFF;
    --mdc-theme-secondary: #6ED3FD;
    color: #FFFFFF;
}


.theme-light {
    --mdc-theme-primary: #FFFFFF;
    --mdc-theme-on-primary: #000000;
    --mdc-theme-secondary: #5E97F6;
    color: #000000;
}

body {
    backface-visibility: hidden;
    -webkit-backface-visibility: hidden;
}
/*The color white is hardcoded in the mdc-web css :(*/
.mdc-top-app-bar__title {
    color: var(--mdc-theme-secondary);
}

.section-title::after {
    content: "\AC"
}

#eg {
    --mdc-theme-secondary: #FF0000;
}

/*TOP_APP_BAR*/
.mdc-top-app-bar__action-item.mdc-ripple-upgraded:hover::before {
    opacity: 0;
}

.container a {
    text-decoration: underline;
    color: var(--mdc-theme-on-primary);
    font-weight: 300;
}

.section-title {
    font-size: 16px;
}

.mdc-fab__icon svg {
    color: var(--mdc-theme-on-secondary);
}

.mdc-linear-progress {
    --mdc-theme-primary: var(--mdc-theme-secondary);
}

.mdc-linear-progress__buffer {
    background-color: var(--mdc-theme-primary);
}

.mdc-linear-progress {
    width: 75vw
}

.mdc-chip-set a {
    text-decoration: none;
}

.theme-dark .mdc-chip {
    background-color: #454545;
    color: #FFFFFF;
}

.skill-entry-achievement .mdc-linear-progress {
    width: 82.5vw
}

.skill-title {
    width: 20vw;
}

@media only screen and (max-width: 992px) {
    .skill-title {
        width: 65vw;
    }    
}

.skill-entry {
    padding-top: 16px;
}

/*FOOTER*/

.footer {
    padding: 16px;
}

.footer a {
    color: var(--mdc-theme-on-primary);
}
/*
.theme-light .footer {
    background-color: #EEEEEE;
}
*/
.mdc-fab {
    margin: 8px;
}

/**/

.invisible {
    visibility: hidden;
}

